--- a/css/globals.css
+++ b/css/globals.css
@@ -17,7 +17,7 @@ html {
 body {
   font-family: var(--fonte-familia);
   background-color: var(--cor-fundo);
-  color: var(--cor-texto-escuro);
+  color: var(--cor-texto-escuro);;
   line-height: 1.6;
 }
 
@@ -35,4 +35,4 @@ ul {
   list-style: none; 
   padding: 0; 
   margin: 0; 
-}                                       
+} 
